Updated stdm.chm added change log

--- a/html/change_log.htm
+++ b/html/change_log.htm
@@ -216,8 +216,7 @@ visibility:hidden; }
  logical flow of the user manual has been greatly improved by incorporating 
  more illustrations and use-case examples.</strong></strong></p>
  <div style="width: 100%; position: relative;" id="footer">
-	<p style="font-family: Cambria, serif; font-size: 11pt;">Copyright 
-	 © &lt;2016&gt; by &lt;UN-Habitat&gt;. All Rights Reserved</p>
+	<p style="font-family: Cambria, serif; font-size: 11pt;">Copyright &copy; &lt;2016&gt; by &lt;UN-Habitat&gt;. All Rights Reserved</p>
 </div>
 <!--<script type="text/javascript" language="javascript1.2">//<![CDATA[-->
 <!--&lt;!&ndash;-->
