Updated stdm.chm and whats new

--- a/html/change_log.htm
+++ b/html/change_log.htm
@@ -22,7 +22,7 @@ visibility:hidden; }
 
 <body>
 
-<h1>What's New in Version 1.2</h1>
+<h1>What's New in Version 1.2?</h1>
 <p>STDM 1.2 is a full release which includes enhanced functionality and 
  stability improvements. One special highlight is the complete redesign 
  of the database customization module; this not only improves the stability 
