Updated documentation and changelog 2

--- a/html/change_log.htm
+++ b/html/change_log.htm
@@ -79,8 +79,7 @@ visibility:hidden; }
 	 style="font-weight: normal;"> - Used for specifying date with time.
  </span></strong></p>
 
-<h3>Permissible</h3>
-<h4>Number of Parties per Spatial Unit</h4>
+<h3>Permissible Number of Parties per Spatial Unit</h3>
 <p style="font-weight: normal;"><strong style="font-weight: normal;">A 
  check constraint can now be applied to limit a single party to one spatial 
  unit when defining a new social tenure relationship otherwise by default, 
