Updated the changelog

--- a/html/change_log.htm
+++ b/html/change_log.htm
@@ -22,13 +22,18 @@ visibility:hidden; }
 
 <body>
 
-<h1>What's New in Version 1.2?</h1>
+<h1>What is New in Version 1.2?</h1>
+
+<p class=MsoNormal><img width=768 height=376 id="Picture 1"
+src="image_files/image001.png"></p>
+
 <p>STDM 1.2 is a full release which includes enhanced functionality and 
  stability improvements. One special highlight is the complete redesign 
  of the database customization module; this not only improves the stability 
  of the system but also allows more data types to be defined by the
  user. The following sections summarize changes in different functional 
  areas of STDM.</p>
+
 <h2>Database Configuration</h2>
 <p>The configuration backend has been redesigned to be more stable and 
  extensible. This has opened up the possibility of customizing the tool 
@@ -178,10 +183,8 @@ visibility:hidden; }
  Wizard and they can be sorted by drag and drop as shown the bottom of 
  the image below.</strong></p>
 <strong><strong style="font-weight: bold;"><img src="./image_files/clip_image032.jpg" alt="" width="551" height="601" border="0"> </strong></strong>
-<h2>Import Data</h2>
-<p><span style="font-family: Cambria, serif;">Supporting documents can
- be imported for each record by specifying the document path in the csv
- file.</span></p>
+<h2>Importing Supporting Documents</h2>
+<p><span style="font-family: Cambria, serif;">Using the value translator framework, supporting documents can now be imported for each record by specifying the root document path in the csv file.</span></p>
 <img src="./image_files/supp_doc_path.jpg" alt="" style=" border:none; width:100%; max-width:586px;" border="0" />
 <h2><strong><strong style="font-weight: bold;">Quick System Settings</strong></strong></h2>
 <p style="font-weight: normal;"><strong><strong style="font-weight: normal;">An 
@@ -229,15 +232,5 @@ visibility:hidden; }
  <div style="width: 100%; position: relative;" id="footer">
 	<p style="font-family: Cambria, serif; font-size: 11pt;">Copyright &copy; &lt;2016&gt; by &lt;UN-Habitat&gt;. All Rights Reserved</p>
 </div>
-<!--<script type="text/javascript" language="javascript1.2">//<![CDATA[-->
-<!--&lt;!&ndash;-->
-<!--if (window.writeIntopicBar)-->
-	<!--writeIntopicBar(0);-->
-
-
-<!--highlightSearch();-->
-<!--//&ndash;&gt;-->
-<!--//]]></script>-->
-
-
-</body></html>
+</body>
+</html>
