Updated the user guide, change log

--- a/html/change_log.htm
+++ b/html/change_log.htm
@@ -22,12 +22,12 @@ visibility:hidden; }
 
 <body>
 
-<h1>What is New in Version 1.2?</h1>
+<h1>What is New in Version 1.4?</h1>
 
 <p class=MsoNormal><img width=768 height=376 id="Picture 1"
 src="image_files/image001.png"></p>
 
-<p>STDM 1.2 is a full release which includes enhanced functionality and 
+<p>STDM 1.4 is a full release which includes enhanced functionality and
  stability improvements. One special highlight is the complete redesign 
  of the database customization module; this not only improves the stability 
  of the system but also allows more data types to be defined by the
@@ -196,7 +196,8 @@ src="image_files/image001.png"></p>
 	<li><span><strong><strong style="font-weight: normal;">Editing database 
 	 connection properties;</strong></strong></span></li>
 	<li><strong style="font-weight: normal;">Path settings for supporting 
-	 documents, report templates and outputs.</strong></li>
+	 documents, report templates and outputs;</strong></li>
+ <li><strong style="font-weight: normal;">Upgrade old STDM configuration.</strong></li>
 </ul>
 <strong><img src="./image_files/options525359632.jpg" alt="" style="border: none;" width="545" height="539" border="0"> </strong>
 <h2><strong><strong style="font-weight: bold;">Migration from Previous 
@@ -214,7 +215,7 @@ src="image_files/image001.png"></p>
 
 <h2><strong><strong style="font-weight: bold;">General</strong></strong></h2>
 <p style="font-weight: normal;"><strong><strong style="font-weight: normal;">The 
- all-in-one installer for STDM 1.2 is built upon the following packages: 
+ all-in-one installer for STDM 1.4 is built upon the following packages:
  PostgreSQL v9.5, PostGIS 2.2 and QGIS 2.14. The new versions of these 
  dependencies not only provide improved stability and workflows, but also 
  include functional enhancements such as row-level security policies, new 
