--- a/html/change_log.htm
+++ b/html/change_log.htm
@@ -184,7 +184,7 @@ src="image_files/image001.png"></p>
  the image below.</strong></p>
 <strong><strong style="font-weight: bold;"><img src="./image_files/clip_image032.jpg" alt="" width="551" height="601" border="0"> </strong></strong>
 <h2>Importing Supporting Documents</h2>
-<p><span style="font-family: Cambria, serif;">Using the value translator framework, supporting documents can now be imported for each record by specifying the root document path in the csv file.</span></p>
+<p><span style="font-family: Cambria, serif;">Using the value translator framework located in the Import module, supporting documents can now be imported for each record by specifying the document path in the module and the file name in the csv file.</span></p>
 <img src="./image_files/supp_doc_path.jpg" alt="" style=" border:none; width:100%; max-width:586px;" border="0" />
 <h2><strong><strong style="font-weight: bold;">Quick System Settings</strong></strong></h2>
 <p style="font-weight: normal;"><strong><strong style="font-weight: normal;">An 
