Enhanced changelog show condition

--- a/html/change_log.htm
+++ b/html/change_log.htm
@@ -59,7 +59,7 @@
 </h2>
 <p >With STDM 1.7 it is now possible to change the order of created entities and columns by simply dragging and dropping. The creation order for entities has an effect on how entities appear on the STDM menu, while the columns creation order reflects on how they appear on the forms.
 </p>
-<h2 >&nbsp;Label
+<h2 >Column Label
 </h2>
 <p >Labeling of columns on a form is now easily customizable. You can now choose which label will appear next to a column field on a generated form. Normally, a label of a column is auto-generated from the value entered in&nbsp;Column Name&nbsp;field when creating columns. &nbsp;Now, with version 1.7, a new field called &nbsp;in the column editor allows you to change that behavior by letting you enter a value that will be used as a column label on the auto-generated form, see image below.
 </p>
